<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intent_short"
    android:orientation="vertical"
    android:paddingBottom="3dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:background="@drawable/button_background" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goods_insert"
            android:textColor="#FFFFFF"
            android:textSize="25sp" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="3"
            android:background="@drawable/goods_insert_name"
            android:text="@string/goods_name"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/goods_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/goods_insert_edit"
            android:hint="@string/goods_name_select"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="3"
            android:background="@drawable/goods_insert_name"
            android:text="@string/goods_price"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/goods_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/goods_insert_edit"
            android:hint="@string/goods_price_select"
            android:inputType="number"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="3"
            android:background="@drawable/goods_insert_name"
            android:text="@string/goods_amount"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/goods_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/goods_insert_edit"
            android:hint="@string/goods_amount_select"
            android:inputType="number"
            android:numeric="integer"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="3"
            android:background="@drawable/goods_insert_name"
            android:text="@string/barcode_name"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/goods_barcode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/goods_insert_edit"
            android:hint="@string/goods_barcode_name_select"
            android:inputType="text"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="3"
            android:background="@drawable/goods_insert_name"
            android:text="@string/note"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/goods_note"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/goods_insert_edit"
            android:hint="@string/note"
            android:textColor="#000000"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/insert_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_background"
            android:text="@string/barcode_insert"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/insert_goods"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_background"
            android:text="@string/goods_insert"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/insert_goods_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/reset"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>